--- a/README
+++ b/README
@@ -6,7 +6,7 @@ The current release of this wrapper is release 0.1. Successive releases will be
 placed in different subfolders as to not change the semantics of code that links
 against a specific version of this wrapper. The general folder structure is
 
-    github.com/fuzxxl/openkey/<version>/freefare
+    github.com/fuzxxl/openkey/<version>/openkey
 
 The following versions are special:
 
